# truffaldino

./: .gitignore  README.md  pyproject.toml
examples/: run_demo.py
negotiation_env/: agents.py  core.py  llm_call.py  parse.py  scenarios.py
negotiation_env/house_price/: generate_context_prompt.txt  reveal_house_state.py  sample_house_state.py
negotiation_env/templates/: mediator_prompt.txt  party_prompt.txt
tests/: test_house_scenario.py  test_house_state.py  test_parse.py
truffaldino/: agents.py  core.py  llm_call.py  scenarios.py
truffaldino/examples/: run_demo.py
truffaldino/house_price/: generate_context_prompt.txt  reveal_house_state.py  sample_house_state.py
truffaldino/templates/: evaluator_prompt.txt  mediator_prompt.txt  party_prompt.txt
truffaldino/tools/: base.py  negotiation_tool.py  schemas.py
